<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MealActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:backgroundTint="@color/g_dark"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_230sdp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="#8D323232"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:collapsedTitleTextColor="@color/white"
            app:expandedTitleTextColor="@color/white"
            app:title="Meal Name">

            <ImageView
                android:id="@+id/img_meal_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/white"
        android:src="@drawable/baseline_favorite_border_24"
        android:backgroundTint="@color/accent"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right"
        />
    
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/const_title1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_beef"
                    android:fontFamily="@font/myfont"
                    android:textColor="@color/g_dark"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    app:layout_constraintStart_toStartOf="@+id/const_title1"
                    app:layout_constraintTop_toTopOf="@id/const_title1"
                    app:drawableLeftCompat="@drawable/baseline_category_24"
                    app:drawableTint="@color/g_dark" />

                <TextView
                    android:id="@+id/tv_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/myfont"
                    android:text="@string/area_palestine"
                    android:textColor="@color/g_dark"
                    android:textStyle="bold"
                    android:layout_weight="2"
                    app:layout_constraintStart_toStartOf="@+id/const_title1"
                    app:layout_constraintTop_toTopOf="@id/const_title1"
                    app:drawableLeftCompat="@drawable/baseline_location_on_24"
                    app:drawableTint="@color/g_dark" />
            </LinearLayout>

            <!--tv Instructions-->
            <TextView
                android:id="@+id/tv_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructions"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textStyle="bold"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/g_dark"
                android:fontFamily="@font/myfont"/>

            <TextView
                android:id="@+id/tv_instructions_steps"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_instructions"
                app:layout_constraintTop_toBottomOf="@+id/tv_instructions" />





        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <!--img youtube-->
    <ImageView
        android:id="@+id/img_youtube"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="@dimen/_10sdp"
        android:src="@drawable/youtube3"/>

    <!--Progress Indicator-->
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/appbar"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_anchorGravity="bottom"/>



</androidx.coordinatorlayout.widget.CoordinatorLayout>